--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,101 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./images/friends-favicon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./sass/main.scss" />
     <script type="module" src="./main.js"></script>
     <title>Friends TV series - Alamin</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="header-contents">
+          <div class="logo">
+            <img src="./images/friends-logo.png" alt="Friends Tv Series logo" />
+          </div>
+
+          <div class="hamburger-menu">
+            <img src="./images/bars-solid.svg" alt="Nav menu icon" />
+          </div>
+
+          <nav class="nav">
+            <ul class="nav-links">
+              <li><a class="nav-link" href="#">Home</a></li>
+              <li>
+                <select name="seasons" id="seasons">
+                  <option selected value="default">Select season</option>
+                  <option value="season-1">Season 1</option>
+                  <option value="season-2">Season 2</option>
+                  <option value="season-3">Season 3</option>
+                  <option value="season-4">Season 4</option>
+                  <option value="season-5">Season 5</option>
+                  <option value="season-6">Season 6</option>
+                  <option value="season-7">Season 7</option>
+                  <option value="season-8">Season 8</option>
+                  <option value="season-9">Season 9</option>
+                  <option value="season-10">Season 10</option>
+                </select>
+              </li>
+              <li><a class="nav-link" href="#">About</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima dolore at
+      dolores, alias atque enim debitis aperiam veritatis laborum temporibus.
+      Quasi, velit pariatur obcaecati soluta sunt aspernatur voluptatem ab
+      rerum.
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-contents">
+          <div class="my-info">
+            <div class="my-photo">
+              <img src="./images/my-photo.webp" alt="Alamin's photo" />
+            </div>
+            <span
+              >Developed by
+              <em
+                ><a href="https://github.com/CodePapa360" target="_blank"
+                  >Alamin</a
+                ></em
+              ></span
+            >
+          </div>
+
+          <p class="copyright">&copy; 2023 Alamin</p>
+
+          <div class="social-links">
+            <a
+              href="https://www.linkedin.com/in/codepapa360/"
+              target="_blank"
+              class="social-link"
+              ><img src="./public/images/linkedin.svg" alt="Linkedin logo"
+            /></a>
+            <a
+              href="https://twitter.com/CodePapa360"
+              class="social-link"
+              target="_blank"
+              ><img src="./public/images/square-twitter.svg" alt="Twitter logo"
+            /></a>
+            <a
+              href="https://github.com/CodePapa360"
+              class="social-link"
+              target="_blank"
+              ><img src="./public/images/square-github.svg" alt="GitHub logo"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
