added-header-functionality

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./sass/main.scss" />
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/main.js"></script>
     <title>Friends TV series - Alamin</title>
   </head>
   <body>
@@ -26,6 +26,13 @@
           </div>
 
           <nav class="nav">
+            <div class="close-menu">
+              <img
+                src="./public/images/circle-xmark-regular.svg"
+                alt="Nav menu close icon"
+              />
+            </div>
+
             <ul class="nav-links">
               <li><a class="nav-link" href="#">Home</a></li>
               <li>
