designed-serchBar&seasonView

--- a/src/index.html
+++ b/src/index.html
@@ -21,22 +21,12 @@
             <img src="./images/friends-logo.png" alt="Friends Tv Series logo" />
           </div>
 
-          <div class="hamburger-menu">
-            <img src="./images/bars-solid.svg" alt="Nav menu icon" />
-          </div>
-
           <nav class="nav">
-            <div class="close-menu">
-              <img
-                src="./public/images/circle-xmark-regular.svg"
-                alt="Nav menu close icon"
-              />
-            </div>
-
             <ul class="nav-links">
               <li><a class="nav-link" href="#">Home</a></li>
               <li>
-                <select name="seasons" id="seasons">
+                <label class="sr-only" for="season-nav">Select Season</label>
+                <select name="seasons" id="season-nav">
                   <option selected value="default">Select season</option>
                   <option value="season-1">Season 1</option>
                   <option value="season-2">Season 2</option>
@@ -53,15 +43,93 @@
               <li><a class="nav-link" href="#">About</a></li>
             </ul>
           </nav>
+
+          <div class="hamburger-menu">
+            <img src="./images/bars-solid.svg" alt="Nav menu icon" />
+          </div>
         </div>
       </div>
     </header>
 
-    <main>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima dolore at
-      dolores, alias atque enim debitis aperiam veritatis laborum temporibus.
-      Quasi, velit pariatur obcaecati soluta sunt aspernatur voluptatem ab
-      rerum.
+    <main id="main-contents">
+      <h1 class="sr-only">Watch Friends Episodes for free without ads</h1>
+      <!--  -->
+
+      <!-- Search form -->
+      <form class="search-form" action="#">
+        <div class="form-sections">
+          <label class="sr-only" for="season-body">Select Season</label>
+          <select class="form-section" name="seasons" id="season-body">
+            <option selected value="default">Select season</option>
+            <option value="season-1">Season 1</option>
+            <option value="season-2">Season 2</option>
+            <option value="season-3">Season 3</option>
+            <option value="season-4">Season 4</option>
+            <option value="season-5">Season 5</option>
+            <option value="season-6">Season 6</option>
+            <option value="season-7">Season 7</option>
+            <option value="season-8">Season 8</option>
+            <option value="season-9">Season 9</option>
+            <option value="season-10">Season 10</option>
+          </select>
+
+          <label class="sr-only" for="episode-body">Select Episode</label>
+          <select class="form-section" name="episodes" id="episode-body">
+            <option selected value="default">Select Episode</option>
+            <option value="season-1">Episode 1</option>
+            <option value="episode-2">Episode 2</option>
+            <option value="episode-3">Episode 3</option>
+            <option value="episode-4">Episode 4</option>
+            <option value="episode-5">Episode 5</option>
+            <option value="episode-6">Episode 6</option>
+            <option value="episode-7">Episode 7</option>
+            <option value="episode-8">Episode 8</option>
+            <option value="episode-9">Episode 9</option>
+          </select>
+        </div>
+        <button type="submit" class="submit-btn">Search</button>
+      </form>
+
+      <!-- Season Card -->
+      <section class="season-cards">
+        <a href="#season-1" class="season-cards__card">
+          <div class="card-contents">
+            <div class="thumbnail">
+              <img src="./public/thumbnails/season-1.jpg" alt="Season 1" />
+            </div>
+            <h2 class="title">Season 1</h2>
+            <span class="release-date">Sept. 12, 1994</span>
+          </div>
+        </a>
+        <a href="#season-1" class="season-cards__card">
+          <div class="card-contents">
+            <div class="thumbnail">
+              <img src="./public/thumbnails/season-1.jpg" alt="Season 1" />
+            </div>
+            <h2 class="title">Season 1</h2>
+            <span class="release-date">Sept. 12, 1994</span>
+          </div>
+        </a>
+        <a href="#season-1" class="season-cards__card">
+          <div class="card-contents">
+            <div class="thumbnail">
+              <img src="./public/thumbnails/season-1.jpg" alt="Season 1" />
+            </div>
+            <h2 class="title">Season 1</h2>
+            <span class="release-date">Sept. 12, 1994</span>
+          </div>
+        </a>
+        <a href="#season-1" class="season-cards__card">
+          <div class="card-contents">
+            <div class="thumbnail">
+              <img src="./public/thumbnails/season-1.jpg" alt="Season 1" />
+            </div>
+            <h2 class="title">Season 1</h2>
+            <span class="release-date">Sept. 12, 1994</span>
+          </div>
+        </a>
+      </section>
+      <!--  -->
     </main>
 
     <footer class="footer">
@@ -88,19 +156,19 @@
               href="https://www.linkedin.com/in/codepapa360/"
               target="_blank"
               class="social-link"
-              ><img src="./public/images/linkedin.svg" alt="Linkedin logo"
+              ><img src="./images/linkedin.svg" alt="Linkedin logo"
             /></a>
             <a
               href="https://twitter.com/CodePapa360"
               class="social-link"
               target="_blank"
-              ><img src="./public/images/square-twitter.svg" alt="Twitter logo"
+              ><img src="./images/square-twitter.svg" alt="Twitter logo"
             /></a>
             <a
               href="https://github.com/CodePapa360"
               class="social-link"
               target="_blank"
-              ><img src="./public/images/square-github.svg" alt="GitHub logo"
+              ><img src="./images/square-github.svg" alt="GitHub logo"
             /></a>
           </div>
         </div>
