designed-episode-cards

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
               <li><a class="nav-link" href="#">Home</a></li>
               <li>
                 <label class="sr-only" for="season-nav">Select Season</label>
-                <select name="seasons" id="season-nav">
+                <select class="nav-link" name="seasons" id="season-nav">
                   <option selected value="default">Select season</option>
                   <option value="season-1">Season 1</option>
                   <option value="season-2">Season 2</option>
@@ -55,80 +55,6 @@
       <h1 class="sr-only">Watch Friends Episodes for free without ads</h1>
       <!--  -->
 
-      <!-- Search form -->
-      <form class="search-form" action="#">
-        <div class="form-sections">
-          <label class="sr-only" for="season-body">Select Season</label>
-          <select class="form-section" name="seasons" id="season-body">
-            <option selected value="default">Select season</option>
-            <option value="season-1">Season 1</option>
-            <option value="season-2">Season 2</option>
-            <option value="season-3">Season 3</option>
-            <option value="season-4">Season 4</option>
-            <option value="season-5">Season 5</option>
-            <option value="season-6">Season 6</option>
-            <option value="season-7">Season 7</option>
-            <option value="season-8">Season 8</option>
-            <option value="season-9">Season 9</option>
-            <option value="season-10">Season 10</option>
-          </select>
-
-          <label class="sr-only" for="episode-body">Select Episode</label>
-          <select class="form-section" name="episodes" id="episode-body">
-            <option selected value="default">Select Episode</option>
-            <option value="season-1">Episode 1</option>
-            <option value="episode-2">Episode 2</option>
-            <option value="episode-3">Episode 3</option>
-            <option value="episode-4">Episode 4</option>
-            <option value="episode-5">Episode 5</option>
-            <option value="episode-6">Episode 6</option>
-            <option value="episode-7">Episode 7</option>
-            <option value="episode-8">Episode 8</option>
-            <option value="episode-9">Episode 9</option>
-          </select>
-        </div>
-        <button type="submit" class="submit-btn">Search</button>
-      </form>
-
-      <!-- Season Card -->
-      <section class="season-cards">
-        <a href="#season-1" class="season-cards__card">
-          <div class="card-contents">
-            <div class="thumbnail">
-              <img src="./public/thumbnails/season-1.jpg" alt="Season 1" />
-            </div>
-            <h2 class="title">Season 1</h2>
-            <span class="release-date">Sept. 12, 1994</span>
-          </div>
-        </a>
-        <a href="#season-1" class="season-cards__card">
-          <div class="card-contents">
-            <div class="thumbnail">
-              <img src="./public/thumbnails/season-1.jpg" alt="Season 1" />
-            </div>
-            <h2 class="title">Season 1</h2>
-            <span class="release-date">Sept. 12, 1994</span>
-          </div>
-        </a>
-        <a href="#season-1" class="season-cards__card">
-          <div class="card-contents">
-            <div class="thumbnail">
-              <img src="./public/thumbnails/season-1.jpg" alt="Season 1" />
-            </div>
-            <h2 class="title">Season 1</h2>
-            <span class="release-date">Sept. 12, 1994</span>
-          </div>
-        </a>
-        <a href="#season-1" class="season-cards__card">
-          <div class="card-contents">
-            <div class="thumbnail">
-              <img src="./public/thumbnails/season-1.jpg" alt="Season 1" />
-            </div>
-            <h2 class="title">Season 1</h2>
-            <span class="release-date">Sept. 12, 1994</span>
-          </div>
-        </a>
-      </section>
       <!--  -->
     </main>
 
