improved-episodes-design

--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,10 @@
       </div>
     </header>
 
-    <main id="main-contents">
+    <main>
       <h1 class="sr-only">Watch Friends Episodes for free without ads</h1>
       <!--  -->
-
+      <div id="App"></div>
       <!--  -->
     </main>
 
