--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
           <nav class="nav">
             <ul class="nav-links">
-              <li><a class="nav-link" href="#">Home</a></li>
+              <li><a class="nav-link" href="#home">Home</a></li>
               <li>
                 <label class="sr-only" for="season-nav">Select Season</label>
                 <select class="nav-link" name="seasons" id="season-nav">
@@ -40,7 +40,7 @@
                   <option value="season-10">Season 10</option>
                 </select>
               </li>
-              <li><a class="nav-link" href="#">About</a></li>
+              <li><a class="nav-link" href="#about">About</a></li>
             </ul>
           </nav>
 
