testing-hsl-video-player

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./sass/main.scss" />
     <script type="module" src="./js/main.js"></script>
     <title>Friends TV series - Alamin</title>
+
+    <script src="https://cdn.tutorialjinni.com/hls.js/1.2.1/hls.min.js"></script>
   </head>
   <body>
     <header class="header">
@@ -54,7 +56,11 @@
     <main>
       <h1 class="sr-only">Watch Friends Episodes for free without ads</h1>
       <!--  -->
-      <div id="App"></div>
+      <div id="App">
+        <!--  -->
+
+        <!--  -->
+      </div>
       <!--  -->
     </main>
 
