testing-plyr-video-player

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="./sass/main.scss" />
     <script type="module" src="./js/main.js"></script>
     <title>Friends TV series - Alamin</title>
+    <!--  -->
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+    <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+    <!--  -->
   </head>
   <body>
     <header class="header">
@@ -56,7 +60,16 @@
       <!--  -->
       <div id="App">
         <!--  -->
-
+        <!-- <video id="player" playsinline controls data-poster="">
+          <source
+            src="https://www.didi2.ir/bestsitcomdl/Friends/s02/Friends.S02E03.720p.BluRay.SoftSub.DigiMoviez.mkv"
+            type="video/mp4"
+          />
+          <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+          <script>
+            const player = new Plyr("#player");
+          </script>
+        </video> -->
         <!--  -->
       </div>
     </main>
