testing-mp4-video

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
     <script type="module" src="./js/main.js"></script>
     <title>Friends TV series - Alamin</title>
     <!--  -->
+    <!-- Plyr cdn -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
-    <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+    <script defer src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
     <!--  -->
   </head>
   <body>
