tested-m3u8-formate-with-videojs

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,7 @@
     <link rel="stylesheet" href="./sass/main.scss" />
     <script type="module" src="./js/main.js"></script>
     <title>Friends TV series - Alamin</title>
-    <!--  -->
-    <!-- Plyr cdn -->
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
-    <script defer src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+    <!-- <link href="https://vjs.zencdn.net/8.5.2/video-js.css" rel="stylesheet" /> -->
     <!--  -->
   </head>
   <body>
@@ -59,20 +56,7 @@
     <main>
       <h1 class="sr-only">Watch Friends Episodes for free without ads</h1>
       <!--  -->
-      <div id="App">
-        <!--  -->
-        <!-- <video id="player" playsinline controls data-poster="">
-          <source
-            src="https://www.didi2.ir/bestsitcomdl/Friends/s02/Friends.S02E03.720p.BluRay.SoftSub.DigiMoviez.mkv"
-            type="video/mp4"
-          />
-          <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
-          <script>
-            const player = new Plyr("#player");
-          </script>
-        </video> -->
-        <!--  -->
-      </div>
+      <div id="App"></div>
     </main>
 
     <footer class="footer">
