--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,10 @@
 
           <nav class="nav">
             <ul class="nav-links">
-              <li><a class="nav-link" href="#home">Home</a></li>
+              <li><a class="nav-link nav-anchor" href="#home">Home</a></li>
               <li>
                 <label class="sr-only" for="season-nav">Select Season</label>
-                <select class="nav-link" name="seasons" id="season-nav">
+                <select class="nav-anchor" name="seasons" id="season-nav">
                   <option selected value="default">Select season</option>
                   <option value="season-1">Season 1</option>
                   <option value="season-2">Season 2</option>
@@ -40,7 +40,7 @@
                   <option value="season-10">Season 10</option>
                 </select>
               </li>
-              <li><a class="nav-link" href="#about">About</a></li>
+              <li><a class="nav-link nav-anchor" href="#about">About</a></li>
             </ul>
           </nav>
 
