added-darkMode-and-aboutView

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,14 @@
             <img src="./images/friends-logo.png" alt="Friends Tv Series logo" />
           </div>
 
+          <!--  -->
+          <input
+            id="dark-mode-toggle"
+            class="dark-mode-toggle"
+            type="checkbox"
+          />
+          <!--  -->
+
           <nav class="nav">
             <ul class="nav-links">
               <li><a class="nav-link nav-anchor" href="#home">Home</a></li>
@@ -78,8 +86,9 @@
 
           <div class="social-links">
             <a
-              href="https://www.linkedin.com/in/codepapa360/"
+              href="https://www.linkedin.com/in/codepapa360"
               target="_blank"
+              rel="noopener noreferrer"
               class="social-link"
               ><img src="./images/linkedin.svg" alt="Linkedin logo"
             /></a>
@@ -87,12 +96,14 @@
               href="https://twitter.com/CodePapa360"
               class="social-link"
               target="_blank"
+              rel="noopener noreferrer"
               ><img src="./images/square-twitter.svg" alt="Twitter logo"
             /></a>
             <a
               href="https://github.com/CodePapa360"
               class="social-link"
               target="_blank"
+              rel="noopener noreferrer"
               ><img src="./images/square-github.svg" alt="GitHub logo"
             /></a>
           </div>
