--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="header-contents">
-          <div class="logo">
-            <img src="./images/friends-logo.png" alt="Friends Tv Series logo" />
-          </div>
+          <a href="#home" class="logo"
+            ><img src="./images/friends-logo.png" alt="Friends Tv Series logo"
+          /></a>
 
           <!--  -->
           <input
