--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--  -->
+    <!-- Primary Meta Tags -->
+    <title>Friends TV series - Alamin</title>
+    <meta name="title" content="Friends TV series - Alamin" />
+    <meta
+      name="description"
+      content="Explore and watch episodes of the iconic 'Friends' TV series on this ad-free, user-friendly website. Enjoy a seamless viewing experience without interruptions. Built using HTML, CSS, and JavaScript."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://friends-tv-series-codepapa360.vercel.app"
+    />
+    <meta property="og:title" content="Friends TV series - Alamin" />
+    <meta
+      property="og:description"
+      content="Explore and watch episodes of the iconic 'Friends' TV series on this ad-free, user-friendly website. Enjoy a seamless viewing experience without interruptions. Built using HTML, CSS, and JavaScript."
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/CodePapa360/Friends-TvSeries-Site/main/screenshots/friends-tv-series-preview-codepapa360.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://friends-tv-series-codepapa360.vercel.app"
+    />
+    <meta property="twitter:title" content="Friends TV series - Alamin" />
+    <meta
+      property="twitter:description"
+      content="Explore and watch episodes of the iconic 'Friends' TV series on this ad-free, user-friendly website. Enjoy a seamless viewing experience without interruptions. Built using HTML, CSS, and JavaScript."
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/CodePapa360/Friends-TvSeries-Site/main/screenshots/friends-tv-series-preview-codepapa360.jpg"
+    />
+
+    <!-- Optional -->
+    <meta name="author" content="Alamin , CodePapa360" />
+    <meta
+      name="keywords"
+      content="Interactive job listings, Web app development, Front-end skills showcase, HTML CSS JavaScript practice, Job search filters UI, Frontend coding project, Web development practice, Frontendmentor project"
+    />
+
+    <!--  -->
+
     <link
       rel="shortcut icon"
       href="./images/friends-favicon.png"
@@ -10,7 +61,6 @@
     />
     <link rel="stylesheet" href="./sass/main.scss" />
     <script type="module" src="./js/main.js"></script>
-    <title>Friends TV series - Alamin</title>
   </head>
   <body>
     <header class="header">
@@ -82,7 +132,13 @@
             >
           </div>
 
-          <p class="copyright">&copy; 2023 Alamin</p>
+          <p class="copyright">
+            &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            Alamin
+          </p>
 
           <div class="social-links">
             <a
