updated-live-site-url

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://friends-tv-series-codepapa360.vercel.app"
+      content="https://friends-tv-series-codepapa360.netlify.app"
     />
     <meta property="og:title" content="Friends TV series - Alamin" />
     <meta
@@ -33,7 +33,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://friends-tv-series-codepapa360.vercel.app"
+      content="https://friends-tv-series-codepapa360.netlify.app"
     />
     <meta property="twitter:title" content="Friends TV series - Alamin" />
     <meta
