--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     <meta name="author" content="Alamin , CodePapa360" />
     <meta
       name="keywords"
-      content="Interactive job listings, Web app development, Front-end skills showcase, HTML CSS JavaScript practice, Job search filters UI, Frontend coding project, Web development practice, Frontendmentor project"
+      content="Friends TV series, Watch episodes online, Free streaming, Vanilla JS website, Web development project, Fan-made website, streaming website, codepapa360, Alamin"
     />
 
     <!--  -->
